# sample-agent-greenhouse

./: .bedrock_agentcore.yaml.example  .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGELOG.md  Dockerfile  Dockerfile.strands  README.md  SECURITY.md  TASK-STATE.md  demo_user_journey.py  entrypoint.py  iam-policy.json  plato_harness.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  MEMORY_DEEP_DIVE.md  architecture-diagram.html
scripts/: add_memory_strategies.py  deploy.sh  e2e_memory_multiturn.py  e2e_memory_test.py  post-deploy-session-storage.sh  setup_memory.py  smoke-test.sh
skills/: plato-platform-guide.md
tests/: conftest.py  test_agent_behavior.py  test_agent_skills_plugin.py  test_agentcore_deploy.py  test_aidlc_inception_skill.py  test_aidlc_telemetry.py  test_aidlc_workflow.py  test_approval_hook.py  test_audit.py  test_bedrock_runtime.py  test_business_metrics.py  test_cc_tool.py  test_chaos.py  test_cli.py  test_cli_control_plane.py  test_concurrency.py  test_control_plane_integration.py  test_debug_skill.py  test_deployment_config.py  test_design_advisor_code_review.py  test_e2e_flows.py  test_e2e_user_journey.py  test_evaluate_cli.py  test_evaluator.py  test_evaluator_integration.py  test_evaluator_specialists.py  test_fleet_ops_skill.py  test_foundation.py  test_foundation_strands.py  test_github_tools_extended.py  test_governance_skill.py  test_guardrails.py  test_hallucination_detector.py  test_handoff.py  test_harness_memory_config.py  test_harness_schema.py  test_harness_workspace_context.py  (+52 more)
(+182 files in other folders)
